feat: enhance EC2 deployment workflow; rename steps for clarity and improve SSH key handling

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,4 @@
-# .github/workflows/deploy.yml
-name: Deploy to EC2
+name: Deploy SQL Files to EC2
 
 on:
   push:
@@ -13,18 +12,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Deploy to EC2
+      - name: Deploy files to EC2
         env:
           EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
+          EC2_PUBLIC_IP: ${{ secrets.EC2_PUBLIC_IP }}
+          EC2_USER: ec2-user # Or your specific user
         run: |
-          echo "$EC2_SSH_KEY" > ec2_key.pem
+          # 1. Prepare the SSH key
+          echo "${{ env.EC2_SSH_KEY }}" > ec2_key.pem
           chmod 600 ec2_key.pem
 
-          ssh -o StrictHostKeyChecking=no -i ec2_key.pem ec2-user@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
-            set -e
+          # 2. Use SSH to create the destination directory on the EC2 instance
+          ssh -o StrictHostKeyChecking=no -i ec2_key.pem ${{ env.EC2_USER }}@${{ env.EC2_PUBLIC_IP }} "mkdir -p /home/${{ env.EC2_USER }}/src"
 
-            mkdir -p /home/ec2-user/src
-
-            scp -r ./* /home/ec2-user/src/
-
-          EOF
+          # 3. Use SCP to copy the repository files from the runner to the EC2 instance
+          scp -o StrictHostKeyChecking=no -i ec2_key.pem -r ./* ${{ env.EC2_USER }}@${{ env.EC2_PUBLIC_IP }}:/home/${{ env.EC2_USER }}/src/
