Add migration tracking table and migration runner script
- Created a migration tracking table "_migrations" to keep track of applied migrations.
- Implemented a bash script "run_migrations.sh" to automate the execution of pending migrations.
- The script checks for the required database URL environment variable and ensures the migrations table exists before running migrations.
- Each migration is executed in order, and successful migrations are recorded in the tracking table.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 export DB_USER=username123
 export DB_NAME=development_db
 export BACKUP_DIR=/path/to/backups
+
+# For tbls schema documentation generation
+# Format: postgres://user:password@host:port/dbname?sslmode=require
+export PRAYERLOOP_DB_URL=postgres://user:password@host:5432/prayerloop?sslmode=require
