--- a/.github/workflows/schema-docs.yml
+++ b/.github/workflows/schema-docs.yml
@@ -9,6 +9,9 @@ on:
       - 'definitions/**'
   workflow_dispatch:  # Allow manual trigger
 
+permissions:
+  contents: write
+
 jobs:
   migrate-and-document:
     runs-on: ubuntu-latest
